# fidelity-engine

./: .coverage  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  combine_batch_results.py  combined_modified_prompts_all_agents_20250602_040409.csv  combined_prompts_all_agents_20250602_040409.csv  json_to_csv.py  mypy.ini  nli_results.json  pyproject.toml  pyprojet.toml  requirements.lock.txt  requirements.txt  run_all_batch_tests.py
.dev/: internal_notes.md
.github/workflows/: ci.yml
COT_agent/: COT_agent_modified_prompts_batch_20250602_034653.csv  COT_agent_prompts_batch_20250602_033516.csv  agent.py  batch_test.py
RAG_agent/: RAG_agent_prompts_batch_20250602_033937.csv  agent.py  batch_test.py
RAG_agent/rag/: embed_pdf.py  retriever.py
RAG_agent/results/: batch_test_results_20250513_193433.json  batch_test_results_20250513_194230.json  batch_test_results_20250513_195326.json  batch_test_results_20250513_213416.json  batch_test_results_20250514_002158.json  batch_test_results_20250514_011135.json
baseline_agent/: agent.py  baseline_agent_prompts_batch_20250602_033358.json  batch_test.py
medsentinel/skills/: base.py  (+4 more)
nli_filtered_agent/: agent.py  batch_test.py  demo_test.py  kb_mapping.py  nli_filtered_agent_modified_prompts_batch_20250602_035536.csv  nli_filtered_agent_modified_prompts_batch_20250602_035536.json  nli_filtered_agent_prompts_batch_20250602_034145.json  nli_verifier.py  rag_wrapper.py  retriever.py
tests/: test_cot_explanation.py  test_nli_validation.py  test_rag_grounding.py  test_router.py
(+53 files in other folders)
