[project]
name = "medsentinel"
version = "0.1.0"
description = "Hallucination-safe agentic QA system for dietitian and healthcare use cases."
authors = [
    { name = "MedSentinel Team", email = "shilpa.musale02@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.13"

dependencies = [
    "aiohttp",
    "httpx",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "PyYAML",
    "requests",
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pre-commit",
    "types-requests",
    "typing_extensions",
    "pytest-cov"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["venv", ".mypy_cache", "tests/data"]
plugins = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["venv", "tests/data"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--strict-markers"

[tool.coverage.run]
branch = true
source = ["medsentinel"]

[tool.coverage.report]
show_missing = true
skip_covered = true
